--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "moment": "2.20.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-big-calendar": "0.18.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-widgets": "4.4.11",
+    "react-widgets-moment": "4.0.27",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
