--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-big-calendar": "0.18.0",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.2",
     "react-widgets": "4.4.11",
     "react-widgets-moment": "4.0.27",
